k8s/infrastructure/network/policies/infrastructure/kubearmor/allow-kubearmor-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubearmor-access
  namespace: kubearmor
  labels:
    policy-type: infrastructure-audit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubearmor
  description: "Allow KubeArmor access"
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.podNamespace: gateway
    toPorts:
    - ports:
      - port: "8089"
        protocol: TCP
  egress:
  - toCIDR: ["10.0.0.0/8"]
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.podNamespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
